PR kern/55268: tmpfs is slow

Enter dotdot into the namecache.